--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --border-color: #eeeeee;
   --icons-color: #afb1b8;
   --grid-item: 1;
+  --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -143,6 +144,8 @@ header {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color var(--animation);
 }
 
 .nav-link {
@@ -152,9 +155,12 @@ header {
 .nav-link:hover,
 .nav-link:focus,
 .contact-link:hover,
-.contact-link:focus,
-.nav-link.current {
+.contact-link:focus {
   outline: none;
+  color: var(--accent-color);
+}
+
+.nav-link.current {
   color: var(--accent-color);
 }
 
@@ -293,26 +299,15 @@ header {
   position: relative;
 }
 
-.work-item-thumb::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  z-index: 1;
-
-  content: '';
-  display: block;
-  width: 100%;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
-}
-
 .work-item-name {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 27px;
-  z-index: 2;
+  bottom: 0;
 
+  display: block;
+  padding-top: 27px;
+  padding-bottom: 27px;
   text-align: center;
 
   font-weight: 700;
@@ -321,6 +316,7 @@ header {
   text-transform: uppercase;
 
   color: var(--dark-bg-text-color);
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /* Команда */
@@ -376,6 +372,8 @@ header {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+
+  transition: background-color var(--animation);
 }
 
 .social-link:hover,
@@ -386,6 +384,8 @@ header {
 
 .social-icon {
   fill: var(--icons-color);
+
+  transition: fill var(--animation);
 }
 
 .social-link:hover .social-icon,
@@ -420,10 +420,14 @@ header {
   color: var(--icons-color);
   border: 1px solid;
   border-radius: 4px;
+
+  transition: color var(--animation);
 }
 
 .client-icon {
   fill: currentColor;
+
+  transition: fill var(--animation);
 }
 
 .client-item:hover,
@@ -490,6 +494,8 @@ header {
 
 .footer-item .social-link {
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color var(--animation);
 }
 
 .footer-item .social-icon {
@@ -528,6 +534,9 @@ header {
   background-color: var(--second-bg-color);
   border: var(--second-bg-color);
   cursor: pointer;
+
+  transition: color var(--animation), background-color var(--animation), border var(--animation),
+    box-shadow var(--animation);
 }
 
 .button:hover,
@@ -550,9 +559,9 @@ header {
 }
 
 .example-link {
-  position: relative;
-
   display: block;
+
+  transition: box-shadow var(--animation);
 }
 
 .example-link:hover,
@@ -578,40 +587,32 @@ header {
 
 .exapmle-img-thumb {
   position: relative;
+
+  overflow: hidden;
 }
 
-.exapmle-img-thumb::before {
+.img-text-thumb {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
-  opacity: 0;
 
-  content: '';
-  background-color: rgba(33, 150, 243, 0.9);
-}
-
-.example-img-text {
-  position: absolute;
-  top: 63px;
-  bottom: 63px;
-  right: 24px;
-  left: 24px;
-  z-index: 2;
-  opacity: 0;
+  display: block;
+  padding: 63px 24px;
 
   font-size: 18px;
   line-height: 1.56;
   color: var(--dark-bg-text-color);
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform var(--animation);
 }
 
-.example-link:hover .exapmle-img-thumb::before,
-.example-link:focus .exapmle-img-thumb::before,
-.example-link:hover .example-img-text,
-.example-link:focus .example-img-text {
-  opacity: 1;
+.example-link:hover .img-text-thumb,
+.example-link:focus .img-text-thumb {
+  transform: translateY(0);
 }
 
 /* Модальное окно */
@@ -622,22 +623,32 @@ header {
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1;
+  z-index: 100;
+  opacity: 1;
 
   background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity var(--animation);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
+  transform: translate(-50%, -50%) scale(1);
+  z-index: 101;
+
+  transition: transform var(--animation);
 
   width: 528px;
   height: 581px;
@@ -651,7 +662,7 @@ header {
   position: absolute;
   top: 8px;
   right: 8px;
-  z-index: 3;
+  z-index: 102;
 
   display: flex;
   align-items: center;
